add unix socket sample code

--- a/socket/Makefile
+++ b/socket/Makefile
@@ -1,5 +1,7 @@
 all:
 	gcc server.c -o server
 	gcc client.c -o client
+	gcc u_server.c -o u_server
+	gcc u_client.c -o u_client
 clean:
-	rm -f server client
+	rm -f server client u_server u_client
