--- a/socket/Makefile
+++ b/socket/Makefile
@@ -1,7 +1,10 @@
-all:
-	gcc server.c -o server
-	gcc client.c -o client
+unix:
 	gcc u_server.c -o u_server
 	gcc u_client.c -o u_client
+
+inet:
+	gcc server.c -o server
+	gcc client.c -o client
+
 clean:
 	rm -f server client u_server u_client
