--- a/socket/Makefile
+++ b/socket/Makefile
@@ -2,9 +2,13 @@ unix:
 	gcc u_server.c -o u_server
 	gcc u_client.c -o u_client
 
+unix2:
+	gcc af_unix_server.c -o af_unix_server
+	gcc af_unix_client.c -o af_unix_client
+
 inet:
 	gcc server.c -o server
 	gcc client.c -o client
 
 clean:
-	rm -f server client u_server u_client
+	rm -f server client u_server u_client af_unix_server af_unix_client
