--- a/docker/node/express/reception/package.json
+++ b/docker/node/express/reception/package.json
@@ -1,15 +1,17 @@
 {
   "name": "reception",
-  "version": "1.0.0",
-  "description": "yet another entry of linkgo.io",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node ./bin/www"
   },
-  "author": "Librae",
-  "license": "MIT",
   "dependencies": {
-    "express": "^4.14.0"
+    "body-parser": "~1.15.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.2.0",
+    "express": "~4.13.4",
+    "jade": "~1.11.0",
+    "morgan": "~1.7.0",
+    "serve-favicon": "~2.3.0"
   }
 }
